Even more spacing fixes

--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ body{
   left: 0;
   background-color: #EAF8E1;
   display: grid;
-  grid-template-rows: 3fr 1fr;
+  grid-template-rows: 2fr 1fr 1fr;
   place-items: center;
   text-align: center;
 
@@ -51,6 +51,7 @@ background-image: url("icon two test.png");
   text-transform: uppercase;
   padding: 0.125rem 1.5rem 0;
   letter-spacing: 1px;
+  grid-row: 3;
 }
 
 .open {
@@ -133,7 +134,7 @@ color: #707070;
 }
 .snow_fox{
  
-  grid-row: 5;
+   grid-row: 5;
 }
 .High, .HighTemp, .Low, .LowTemp{
    place-items: center;
@@ -159,7 +160,7 @@ color: #707070;
   color:white;
 }
 .Day1, .Day3, .Day5{
-  background:#707078;
+  background:gray;
   color:white;
 }
 .DayIcon{
